--- a/templates/chat.html
+++ b/templates/chat.html
@@ -22,12 +22,12 @@
 							<div class="d-flex bd-highlight">
 								<div class="img_cont">
 									<img src="" class="rounded-circle user_img">
-									<!-- <img src="https://www.prdistribution.com/spirit/uploads/pressreleases/2019/newsreleases/d83341deb75c4c4f6b113f27b1e42cd8-chatbot-florence-already-helps-thousands-of-patients-to-remember-their-medication.png" class="rounded-circle user_img"> -->
+									
 									<span class="online_icon"></span>
 								</div>
 								<div class="user_info">
 									<span>network Chatbot</span>
-									<p>Ask me anything!</p>
+									<p>Ask me anything about network!</p>
 								</div>
 							</div>
 						</div>
